@@ -14,7 +14,9 @@
             <excludes>
                 <exclude>**/*.log</exclude>
                 <exclude>**/.*</exclude>
-                <exclude>com/ibm/**</exclude>
+                <exclude>**/Thumbs.db</exclude>
+                <exclude>com/ibm/oti/connection/CreateConnection.class</exclude>
+                <exclude>com/ibm/oti/vm/**</exclude>
                 <exclude>com/sun/cdc/io/ConnectionBaseInterface.class</exclude>
             </excludes>
         </fileSet>
