@@ -61,8 +61,9 @@ public class Connection implements CreateConnection, StreamConnection, StreamCon
 		impl = MicroeditionConnector.open(BluetoothConsts.PROTOCOL_SCHEME_RFCOMM + ":" + spec, access, timeout);
 	}
 
-	public void setParameters2(String spec, int access, boolean timeout) throws IOException {
+	public javax.microedition.io.Connection setParameters2(String spec, int access, boolean timeout) throws IOException {
 		setParameters(spec, access, timeout);
+		return this;
 	}
 	
 	public void close() throws IOException {
